--- a/css/style.css
+++ b/css/style.css
@@ -312,12 +312,22 @@ footer {
 		border:1px solid #fff;
 	}
 	
+	.skills img {
+		width: 50%;
+		display: block;
+		margin: 5%;
+	}
+	
     }
 
     /* Extra Small Devices, Phones */ 
     @media only screen and (max-width : 480px) {
 	
-	
+	.skills img {
+		width: 50%;
+		display: block;
+		margin: 5%;
+	}
 	
     }
 
