--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ body {
 }
 
 .skills-text h1 {
-	font-size: 3em;
+	font-size: 2.5em;
 }	
 
 .skills .row {
@@ -215,20 +215,39 @@ body {
 }
 
 #c{
-	height: 100vh;
+	width: 100%;
 	background: #eea849;
 }
 
-.portfolio {
-	z-index: 4;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-	width: 60%;
-    margin: auto;
-	padding: 4% 0 5% 0;
+.carousel{
+	margin: auto;
+	padding: 5% 0 10% 0;
+	width: 80%;
+}
+
+.carousel .item img{
+    margin: 0 auto; /* Align slide image horizontally center */
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none
+}
+
+.row.featurette {
+	margin: auto;
+	width: 70%;
+}
+
+.carousel h2 {
+	font-size: 2.5em;
+}
+
+.carousel p {
+	font-size: 1.8em;
+}
+
+.featurette-heading {
+	margin-bottom: 10%;
 }
 
 #about {
@@ -237,6 +256,7 @@ body {
 }
 
 #d{
+	margin: 0;
    background: linear-gradient(to right, #0575e6, #021b79);
    height: 75vh;
 }
