--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,9 @@ body {
 }
 
 .skills {
+	width: 60%;
+	border-radius: 0;
+    border-bottom: solid 2px rgba(5, 5, 5, 0.2);
     margin: auto;
 	padding-bottom: 4%;
 }
@@ -214,13 +217,20 @@ body {
 }
 
 #c{
-	background: #eea849;
+	background: #fff;
+}
+
+.showcase {
+	width: 60%;
+	margin: auto;
+	height: 100vh;
+	border-radius: 0;
+    border-bottom: solid 2px rgba(5, 5, 5, 0.2);
 }
 
 .carousel{
-	margin: auto;
+	margin: 5vh auto;
 	padding: 5% 0 10% 0;
-	width: 80%;
 }
 
 .carousel .item img{
@@ -249,6 +259,7 @@ body {
 }
 
 #about {
+	height: 100vh;
 	background: #fff;
 }
 
