--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,12 @@ body {
 }
 
 .navbar.compressed #contact {
-	background: red;
+	background: #0575e6;
 	border-radius: 10px;
 }
 
 .navbar.compressed #contact:hover {
-	background: rgba(2, 27, 121, 0.3);
+	background: rgba(255, 255, 255, 0.2);
 }
 
 .icon-bar
@@ -233,7 +233,7 @@ body {
 
 .carousel{
 	margin: 5vh auto;
-	padding: 5% 0 10% 0;
+	padding: 5% 0 8% 0;
 }
 
 .carousel .item img{
