--- a/css/style.css
+++ b/css/style.css
@@ -228,34 +228,32 @@ body {
     border-bottom: solid 2px rgba(5, 5, 5, 0.2);
 }
 
-.carousel{
-	margin: 5vh auto;
-	padding: 5% 0 7% 0;
+.selector {
+	width: 60%;
+	border-radius: 0;
+    border-bottom: solid 1px rgba(5, 5, 5, 0.2);
+    margin: auto;
+	padding-bottom: 4%;
 }
 
-.carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
+.selector img {
+		width: 50%;
+		display: block;
+		margin: 1%;
 }
 
-.carousel-control.left, .carousel-control.right {
-    background-image: none
-}
-
-.row.featurette {
-	margin: auto;
-	width: 70%;
-}
-
-.carousel h2 {
+.selector-text h1 {
 	font-size: 2.5em;
+}	
+
+.selector .row {
+	margin-top: 5%;
 }
 
-.carousel p {
-	font-size: 1.8em;
-}
-
-.featurette-heading {
-	margin-bottom: 10%;
+.selector p {
+	font-size: 1.5em !important;
+	font-weight: 500;
+	text-align: left;
 }
 
 #about {
@@ -298,6 +296,16 @@ footer {
 	}
 	
 	.skills img {
+		width: 50%;
+		display: block;
+		margin: 5%;
+	}
+	    
+	.selector-text h1 {
+		font-size: 1.5em;
+	}
+	
+	.selector img {
 		width: 50%;
 		display: block;
 		margin: 5%;
