--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,13 @@ body {
 		opacity: 0.5;
 }
 
+.selector img:hover {
+		width: 52%;
+		display: block;
+		margin: 1%;
+		opacity: 0.75;
+}
+
 .selector-text h1 {
 	font-size: 2.5em;
 }	
