--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,11 @@ body {
 		width: 50%;
 		display: block;
 		margin: 1%;
-		opacity: 0.5;
+		opacity: 0.3;
+}
+
+.selector img:hover {
+		opacity: 0.6;
 }
 
 .selector-text h1 {
