--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,16 @@ body {
 	text-align: left;
 }
 
+#home img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#home {
+	background: pink url("img_tree.gif") no-repeat fixed center;
+}
+
 #about {
 	height: 100vh;
 	background: #fff;
