--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ body {
 	text-align: left;
 }
 
-#home img {
+#home #menu1 #menu2 #menu3 img {
     display: block;
 	margin-top: 5%;
     margin-left: auto;
