--- a/css/style.css
+++ b/css/style.css
@@ -266,10 +266,10 @@ body {
 }
 
 #home #menu1 #menu2 #menu3 img {
-    display: block;
-	margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
+    	display: block;
+	margin-top: w%;
+   	margin-left: auto;
+    	margin-right: auto;
 }
 
 #about {
