--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ body {
 
 #home #menu1 #menu2 #menu3 img {
     	display: block;
-	margin-top: w%;
+	margin-top: 4%;
    	margin-left: auto;
     	margin-right: auto;
 }
