--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ body {
 }
 
 #home a img {
+	width: 90%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
@@ -273,6 +274,7 @@ body {
 }
 
 #menu1 img {
+	width: 50%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
