--- a/css/style.css
+++ b/css/style.css
@@ -266,15 +266,23 @@ body {
 }
 
 #home a img {
-	width: 90%;
+		width: 90%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
     	margin-right: auto;
 }
 
+#home p, #menu1 p, #menu2 p, #menu3 p {
+	font-size: 1.75em;
+}	
+
+#home .row, #menu1 .row, #menu2 .row, #menu3 .row {
+	margin-top: 5%;
+}
+
 #menu1 img {
-	width: 50%;
+		width: 50%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
@@ -282,6 +290,7 @@ body {
 }
 
 #menu2 img {
+		width: 90%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
@@ -289,6 +298,7 @@ body {
 }
 
 #menu3 img {
+		width: 90%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
