--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
 }
 
 .showcase {
-	height: 60vh;
+	min-height: 70vh;
 	width: 60%;
 	margin: auto;
 	border-radius: 0;
@@ -278,7 +278,7 @@ body {
 }	
 
 #home .row, #menu1 .row, #menu2 .row, #menu3 .row {
-	margin-top: 5%;
+	margin-top: 9%;
 }
 
 #menu1 img {
@@ -309,8 +309,6 @@ body {
 	height: 100vh;
 	background: #fff;
 }
-
-
 
 #d{
 	margin: 0;
@@ -347,7 +345,7 @@ footer {
 	.skills img {
 		width: 50%;
 		display: block;
-		margin: 5%;
+		margin: auto;
 	}
 	    
 	.selector-text h1 {
@@ -401,6 +399,10 @@ footer {
 	
 	.scroll {
 		display: none;
+	}
+	
+	#home p, #menu1 p, #menu2 p, #menu3 p {
+	font-size: 1em;
 	}
 	
     }
