--- a/css/style.css
+++ b/css/style.css
@@ -221,11 +221,20 @@ body {
 }
 
 .showcase {
-	min-height: 70vh;
+	position: relative;
+	min-height: 90vh;
 	width: 60%;
 	margin: auto;
 	border-radius: 0;
     border-bottom: solid 2px rgba(5, 5, 5, 0.2);
+}
+
+.showcase .tab-content {
+	position: absolute;
+	min-height: 70vh;
+	top: 50%; 
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
 
 .selector {
@@ -314,6 +323,36 @@ body {
 	margin: 0;
    background: linear-gradient(to right, #0575e6, #021b79);
    height: 75vh;
+}
+
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+#d .container {
+	margin: 
+    border-radius: 5px;
+    padding: 20px;
 }
 
 footer {
