--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body {
 	font-size: 100%;
 }
 
+img {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .hero {
 	position:fixed;
     top:0;
@@ -80,7 +86,7 @@ body {
 }
 
 .navbar.compressed #contact {
-	background: #ff9900;
+	background: #0575e6;
 	border-radius: 10px;
 }
 
@@ -194,8 +200,6 @@ body {
 
 .skills img {
 		width: 50%;
-		display: block;
-		margin: 1%;
 }
 
 .skills-text h1 {
@@ -247,8 +251,6 @@ body {
 
 .selector img {
 		width: 50%;
-		display: block;
-		margin: 1%;
 		opacity: 0.3;
 }
 
@@ -272,6 +274,10 @@ body {
 	font-size: 1.5em !important;
 	font-weight: 500;
 	text-align: left;
+}
+
+.examples {
+	margin:0 auto;
 }
 
 #home a img {
@@ -320,12 +326,24 @@ body {
 }
 
 #d{
-	margin: 0;
-   background: linear-gradient(to right, #0575e6, #021b79);
-   height: 75vh;
+	position: relative;
+	min-height: 80vh;
+	background: linear-gradient(to right, #0575e6, #021b79);
+}
+
+#d .container {
+	position: absolute;
+	min-height: 60vh;
+	top: 50%; 
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 1.5em !important;
+	font-weight: 500;
+	text-align: left;
 }
 
 input[type=text], select, textarea {
+	background: #F7F7F7;
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */  
     border: 1px solid #ccc; /* Gray border */
@@ -337,20 +355,29 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
+	letter-spacing: 2px;
+    background-color: #3399ff;
     color: white;
-    padding: 12px 20px;
+    padding: 17px 25px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
+input[type=text]:hover {
+    background-color: #fff;
+}
+
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #0575e6;
+}
+
+label {
+	color: #fff;
+	letter-spacing: 2px;
 }
 
 #d .container {
-	margin: 
     border-radius: 5px;
     padding: 20px;
 }
