--- a/css/style.css
+++ b/css/style.css
@@ -67,30 +67,35 @@ img {
 	color: #fff;
 }
 
-.nav.left li a:hover {
-	color: #ff8c1a;
+.navbar.compressed .left li a:hover {
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .nav>li>a:focus, .nav>li>a:hover {
         text-decoration: none;
         background-color: transparent !important;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
   
 #contact {
-	border: 2px solid rgba(255, 255, 255, 0.2);
+	border: 2px solid rgba(255, 255, 255, 0.1);
 	border-radius: 10px;
 }
 
 #contact:hover {
-	background: rgba(255, 255, 255, 0.2);
+	background: rgba(255, 255, 255, 0.1);
 }
 
 .navbar.compressed #contact {
 	border-radius: 10px;
 }
 
-.navbar.compressed #contact:hover {
-	background: #b30000;
+#contact.redcontact:hover {
+	background: rgba(66, 39, 90, 0.5);
+}
+
+#contact.bluecontact:hover {
+	background: rgba(3, 49, 148, 0.5);
 }
 
 .icon-bar
@@ -137,9 +142,26 @@ img {
 .socials {
 	position: fixed;
 	text-align: center;
-    position: absolute;
+	position: absolute;
     top: 45%;
     left: 0%;
+}
+
+.layover img {
+	z-index: 999;
+	position: fixed;
+}
+
+.layover {
+	position: fixed;
+	text-align: center;
+	position: absolute;
+    top: 90%;
+    right: 5%;
+}
+
+.nonvisible {
+	display: none;
 }
 
 .socials ul {
@@ -188,7 +210,7 @@ img {
 }
 
 .bluecontact {
-	background: #0575e6;
+	background: #033194;
 }
 
 .redcontact {
@@ -311,7 +333,7 @@ img {
 }
 
 #menu1 img {
-		width: 50%;
+		width: 90%;
     	display: block;
 	margin-top: 3%;
    	margin-left: auto;
@@ -336,7 +358,6 @@ img {
 
 #about {
 	height: 100vh;
-	background: #fff;
 }
 
 #d{
