--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,24 @@ img {
     z-index:-99;
 }
 
+.backfont {
+	font-size: 7em;
+	color: #e8e8e8;
+	font-size: 20em;
+	font-weight: 900;
+	text-transform: uppercase;
+	z-index: 1;
+	position: absolute;
+}
+
+#b .backfont {
+	margin: -1% 20% 0 0;
+}
+
+#e .backfont {
+	margin: 9% 0 0 40%;
+}
+
 .blueback {
 	background: linear-gradient(to right, #0575e6, #021b79);
 }
@@ -232,14 +250,19 @@ img {
     border-bottom: solid 1px rgba(5, 5, 5, 0.2);
     margin: auto;
 	padding-bottom: 4%;
+	position: relative;
 }
 
 .skills img {
 		width: 50%;
+		z-index: 2;
+		position: relative;
 }
 
 .skills-text h1 {
 	font-size: 2.5em;
+	position: relative;
+	z-index: 5;
 }	
 
 .skills .row {
@@ -250,10 +273,12 @@ img {
 	font-size: 1.5em !important;
 	font-weight: 500;
 	text-align: left;
+	position: relative;
 }
 
 #right {
 	text-align: right;
+	position: relative;
 }
 
 #c{
@@ -286,30 +311,39 @@ img {
 }
 
 .selector img {
+		position: relative;
 		width: 50%;
-		opacity: 0.3;
+		opacity: 0.75;
+		z-index: 2;
 }
 
 .selector img:hover {
-		opacity: 0.6;
+		opacity: 0.9;
 }
 
 .current img {
+	position: relative;
 	opacity: 1.0;
+	z-index: 2;
 }
 
 .selector-text h1 {
+	position: relative;
 	font-size: 2.5em;
+	z-index: 2;
 }	
 
 .selector .row {
+	position: relative;
 	margin-top: 5%;
 }
 
 .selector p {
+	position: relative;
 	font-size: 1.5em !important;
 	font-weight: 500;
 	text-align: left;
+	z-index: 2;
 }
 
 .examples {
